--- a/app/templates/components/query-blurb.hbs
+++ b/app/templates/components/query-blurb.hbs
@@ -3,12 +3,18 @@
   Licensed under the terms of the Apache License, Version 2.0.
   See the LICENSE file associated with the project for terms.
  --}}
-<div class="filter-summary-text">
-  <strong>Filters: </strong> {{summary.filterSummary}}
-</div>
-<div class="fields-summary-text">
-  <strong>Fields: </strong> {{summary.fieldsSummary}}
-</div>
-<div class="window-summary-text">
-  <strong>Window: </strong> {{summary.windowSummary}}
-</div>
+{{#if isBql}}
+  <div class="filter-summary-text">
+    <strong>BQL: </strong> {{bql}}
+  </div>
+{{else}}
+  <div class="filter-summary-text">
+    <strong>Filters: </strong> {{summary.filterSummary}}
+  </div>
+  <div class="fields-summary-text">
+    <strong>Fields: </strong> {{summary.fieldsSummary}}
+  </div>
+  <div class="window-summary-text">
+    <strong>Window: </strong> {{summary.windowSummary}}
+  </div>
+{{/if}}
